# geonames-index

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  settings.toml
examples/: index-geonames.py
geonames/: __init__.py  config.py  index.py  mutator.py  reader.py
mappings/: geonames.json  geonames.sh
utilities/: download-files.sh
